--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editBookmark.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editBookmark.jspx
@@ -21,9 +21,7 @@
 		command="${command}" 
 		detailedInformation="${detailedInformation}"
 		resourceType="Bookmark"
-		activeTab="post"
-		minimizedContentWidth="${true}"
-		>
+		activeTab="post">
 
 		<jsp:attribute name="generalInformation">
 		
