--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
@@ -17,7 +17,7 @@
 	
 	<fmt:message key="limited_account.activation.naviActivate" var="pageTitle" />
 	
-	<layout:paneLayout command="${command}" pageTitle="${pageTitle}" requPath="${requPath}" headerMessageKey="limited_account.activation.naviActivate" minimizedContentWidth="${false}">
+	<layout:paneLayout command="${command}" pageTitle="${pageTitle}" requPath="${requPath}" headerMessageKey="limited_account.activation.naviActivate">
 	
 		<jsp:attribute name="headerExt">
 			<style type="text/css">
