--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/user_to_be_activated.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/user_to_be_activated.jspx
@@ -12,7 +12,7 @@
 
 	<fmt:message key="navi.register" var="pageTitle" />
 	
-	<layout:paneLayout command="${command}" pageTitle="${pageTitle}" requPath="${requPath}" headerMessageKey="navi.register" minimizedContentWidth="${true}">
+	<layout:paneLayout command="${command}" pageTitle="${pageTitle}" requPath="${requPath}" headerMessageKey="navi.register">
 
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.register"/>
