--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/success.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/success.jspx
@@ -14,7 +14,7 @@
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
-	<layout:paneLayout command="${command}" pageTitle="${command.pageTitle}" requPath="${requPath}" headerMessageKey="success" minimizedContentWidth="${true}">
+	<layout:paneLayout command="${command}" pageTitle="${command.pageTitle}" requPath="${requPath}" headerMessageKey="success">
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="success"/>
 		</jsp:attribute>
