--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/sync.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/sync.jspx
@@ -19,8 +19,7 @@
 		requPath="${requPath}" 
 		pageTitle="${syncPageTitle}" 
 		command="${command}" 
-		headerMessageKey="navi.sync"
-		minimizedContentWidth="${true}">
+		headerMessageKey="navi.sync">
 	
 		<jsp:attribute name="headerExt">
 			<link rel="stylesheet" type="text/css" href="${resdir}/css/sync.css" />
