--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
@@ -18,7 +18,7 @@
 	<c:set var="requestedAuthorEncoded" value="${mtl:encodeURI(command.requestedAuthor)}" />
 	<fmt:message key="navi.author" var="authorPageTitle" />
 	<c:set var="pageTitle" value="${authorPageTitle} :: ${command.requestedAuthor}" />
-	<layout:resourceLayout pageTitle="${pageTitle}" command="${command}" requPath="${requPath}" disableResourcetypeSelection="${true}" minimizedContentWidth="${true}" headline="${pageTitle}">
+	<layout:resourceLayout pageTitle="${pageTitle}" command="${command}" requPath="${requPath}" disableResourcetypeSelection="${true}" headline="${pageTitle}">
 		
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
