--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/relations.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/relations.jspx
@@ -21,8 +21,7 @@
     		pageTitle="${pageTitle}" 
     		requPath="${requPath}" 
     		activeTab="popular"
-    		showPageOptions="${command.context.userLoggedIn}"
-    		minimizedContentWidth="${true}">
+    		showPageOptions="${command.context.userLoggedIn}">
 
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.relations" formAction="/concept/tag/" formInputName="tag"/>
