--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -62,6 +62,8 @@
 /** Batchedit page info Box on mouseover*/
 @import "BatchEdit.less";
 
+@import "goldstandards.less";
+
 /** Mobile Menu Layout */
 @import "MobileMenu.less";
 
