--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/lucene.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/lucene.jspx
@@ -21,8 +21,7 @@
 	<layout:layout 
 		pageTitle="${pageTitle} :: Lucene" 
 		loginUser="${command.context.loginUser}" 
-		requPath="${requPath}"
-		minimizedContentWidth="${true}">
+		requPath="${requPath}">
 		
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
