--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/edittags.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/edittags.jspx
@@ -21,7 +21,7 @@
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	
 	<layout:paneLayout pageTitle="${pageTitle}" headerMessageKey="navi.editTags" 
-		headerLogoClass="editTags" command="${command}" requPath="${requPath}" minimizedContentWidth="${true}">
+		headerLogoClass="editTags" command="${command}" requPath="${requPath}">
 		
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.editTags"/>
