--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
@@ -9,7 +9,7 @@
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
-	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardBookmark" minimizedContentWidth="${true}">
+	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardBookmark">
 		<jsp:attribute name="generalInformation">
 			<editBook:required post="${post}" />
 		</jsp:attribute>
