--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardPublication.jspx
@@ -9,7 +9,7 @@
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	
-	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardPublication" minimizedContentWidth="${true}">
+	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardPublication">
 		
 		<jsp:attribute name="generalInformation">
 			<editpub:required post="${command.post}" autocompletion="$(false)"/>
