--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/ldap/profile_form.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/ldap/profile_form.jspx
@@ -16,7 +16,7 @@
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
 	<fmt:message key="navi.register" var="pageTitle" />
-	<layout:paneLayout command="${command}" pageTitle="${pageTitle}" requPath="${requPath}" headerMessageKey="register.ldap.step2" minimizedContentWidth="${true}">
+	<layout:paneLayout command="${command}" pageTitle="${pageTitle}" requPath="${requPath}" headerMessageKey="register.ldap.step2">
 	
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.register"/>
