--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtex.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtex.jspx
@@ -14,6 +14,7 @@
 	xmlns:resources="urn:jsptagdir:/WEB-INF/tags/bstags/resources/common"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/layout/bootstrap"
+	xmlns:goldstandardpublication="urn:jsptagdir:/WEB-INF/tags/bstags/resources/goldstandardpublication"
 	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
@@ -26,7 +27,7 @@
 	<c:set var="isPublic" value="${false}"/>
 	<c:choose>
 		<c:when test="${goldstandardPresent}">
-			<c:set var="isPublic" value="${true }"/>
+			<c:set var="isPublic" value="${true}"/>
 		</c:when>
 		<c:otherwise>
 			<!-- quick fix for discussion page -->
@@ -47,34 +48,28 @@
 	
 	<fmt:message key="navi.publication" var="pageTitle"/>
 	
-	<layout:resourceLayout pageTitle="${pageTitle} :: ${title}" 
-			command="${command}" 
-			requPath="${requPath}" 
-			disableResourcetypeSelection="${true}"
-			showPageOptions="${false}"
-			customBookmarksHeaderText="${discussionsTitle}"
-			minimizedContentWidth="${true}"
-			resource="${publication}"
-			discussionBox="${discussionBox}"
-			headline="${title}">
+	<!-- FIXME: rss feeds -->
+	<layout:layout pageTitle="${title}"
+			loginUser="${command.context.loginUser}"
+			requPath="${requPath}"
+			noSidebar="${true}">
 		
 		<jsp:attribute name="headerExt">
 			<script type="text/javascript" src="${resdir}/javascript/merged/bs/discussion.js"><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/Chart.js/Chart.js"><!-- keep me --></script>
 			<script type="text/javascript" src="${resdir}/javascript/bs/publication.js"><!-- keep me --></script>
-			<c:if test="${goldstandardPresent}">
-				<script type="text/javascript" src="${resdir}/javascript/bs/goldstandards.js"><!-- keep me --></script>
-			</c:if>
+			<script type="text/javascript" src="${resdir}/javascript/bs/goldstandards.js"><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/star-rating/star-rating.js"><!-- keep me --></script>
 			<link rel="stylesheet" type="text/css" href="${resdir}/jquery/plugins/ui/plugins/stars/jquery.ui.stars.css" />
+			<link rel="stylesheet" type="text/css" href="${resdir}/star-rating/star-rating.css" />
 		</jsp:attribute>
 		
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
 				<jsp:attribute name="crumbs">
-					<c:if test="${goldstandardPresent}">
-						<fmt:message key="actions.communityPost" var="communityPost"/>
-						<nav:crumb name="${communityPost}" />
-					</c:if>
-					<nav:crumb name="${mtl:shorten(title, 25)}" active="true" />
+					<fmt:message key="actions.communityPost" var="communityPost"/>
+					<nav:crumb name="${communityPost}" />
+					<nav:crumb name="${mtl:shorten(title, 55)}" active="true" />
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
@@ -86,33 +81,18 @@
 		<jsp:attribute name="content">
 			<!-- COMMUNITY POST -->
 			<input id="publicInput" name="publicInput" value="${isPublic}" type="hidden" />
-			<c:choose>
-				<c:when test="${empty command.goldStandardPublications.list}">
-						<c:set var="post" value="${command.bibtex.list[0]}" />
-						<c:url var="editGoldStandardLink" value="/editGoldStandardPublication">
-							<c:param name="hash" value="${post.resource.intraHash}" />
-							<c:param name="user" value="${post.user.name}" />
-							<c:param name="editBeforeSaving" value="true" />
-						</c:url>
-						
-						<h1 class="content-header"><c:out value="${pageTitle}" /></h1>
-						<div class="text-center">
-							<div class="lead">
-								<p><fmt:message key="actions.community_post.no" /></p> 
-							</div>
-							<bs:linkButton href="${editGoldStandardLink}" size="defaultSize" style="primary" textKey="actions.community_post.create" />
-							<hr />
-						</div>
-					<!-- invokes discussion forms -->
-					<c:if test="${not goldstandardPresent}">
-						<discussion:discussion loginUser="${command.context.loginUser}" resource="${publication}" discussionItems="${command.discussionItems}"  postUserName="${command.postOwner}"/>
-					</c:if>
-					<input type="hidden" id="gs_present" value="${goldstandardPresent}"/>
-				</c:when>
-			</c:choose>
+			
+			<c:set var="postToShow" value="${command.bibtex.list[0]}" />
+			<c:if test="${goldstandardPresent}">
+				<c:set var="postToShow" value="${command.goldStandardPublications.list[0]}" />
+			</c:if>
+			
+			<goldstandardpublication:details post="${postToShow}" loginUser="${command.context.loginUser}"/>
+			
 		</jsp:attribute>
-
+		
 		<!--+
+			| TODODZO: remove
 		    | sidebar
 		 	+-->
 		<jsp:attribute name="sidebar">
@@ -137,24 +117,5 @@
 			<!-- copy users -->
 			<resources:metaData command="${command}" />
 		</jsp:attribute>
-		
-		<!--+
-		    | infobox
-		 	+-->
-		<jsp:attribute name="infobox">
-			<parts:infobox>
-				<jsp:attribute name="infoTextBody">
-					<!-- short info about discussions -->
-					<fmt:message key="discussion.info"><fmt:param><fmt:message key="discussion.info.publication"></fmt:message></fmt:param></fmt:message>
-					
-					<!-- quick links on what you can do -->
-					<p><fmt:message key="discussion.info.examples"/></p>
-					<ul class="news">
-						<li><fmt:message key="discussion.info.publications"/></li>
-						<li><fmt:message key="discussion.info.bookmarks"/></li>
-					</ul>
-				</jsp:attribute>
-			</parts:infobox>
-		</jsp:attribute>
-	</layout:resourceLayout>
+	</layout:layout>
 </jsp:root>
