--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/hashexample.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/hashexample.jspx
@@ -25,8 +25,7 @@
 		headerLogoClass="bookmarks" 
 		command="${command}" 
 		requPath="${requPath}" 
-		activeTab="post"
-		minimizedContentWidth="${true}">
+		activeTab="post">
 
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.bibtexhashexample"/>
