--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -30,7 +30,7 @@ ul.checklist {
 
 body {
 	background-color: @background-color; 
-    background-image: url("/resources/image/bg.png");
+	background-image: url("/resources/image/bg.png");
 }
 
 /** FIX for right dropdown alignment */
@@ -52,11 +52,15 @@ ul.dropdown-menu.list-options > li > span {
 	font-size: inherit;
 }
 
+
+.community-approved {
+	color: @main-color;
+}
 /*
  * Fonts
  */
 .small-font {
-    font-size: @small-font-size;   
+	font-size: @small-font-size;
 }
 
 /*
@@ -75,9 +79,9 @@ ul.dropdown-menu.list-options > li > span {
 
 .container {
 	border-color: @border-color;
-    border-width: 1px;
-    border-style: solid;
-    border-bottom: none;
+	border-width: 1px;
+	border-style: solid;
+	border-bottom: none;
 	background-color: #FFFFFF;
 }
 
@@ -123,20 +127,20 @@ ul.dropdown-menu.list-options > li > span {
 
 #logo h1,
 #puma-logo h1 {
-    font-size: 36px;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-    margin-top: 20px;
-    margin-bottom: 0px;
+	font-size: 36px;
+	font-family: inherit;
+	font-weight: 500;
+	line-height: 1.1;
+	color: inherit;
+	margin-top: 20px;
+	margin-bottom: 0px;
 }
 
 #logo h1 small#beta,
 #puma-logo h1 small#beta {
-    font-size: 17px;
-    position: relative;
-    top: -7px;
+	font-size: 17px;
+	position: relative;
+	top: -7px;
 }
 
 #logo h1 a,
@@ -204,6 +208,37 @@ a, .btn-link {
 .nav .open>a:hover, 
 .nav .open>a:focus {
 	background-color: inherit;
+}
+
+.sidebar-nav.affix {
+	position: fixed;
+	top: 25px;
+}
+
+.sidebar-nav.affix-top {
+	position: static;
+	margin-top: 50px;
+}
+
+.sidebar-nav .nav>li>a {
+	color: #848484;
+	font-weight: bold;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+.sidebar-nav .nav>li>a:focus, .sidebar-nav .nav>li>a:hover {
+	padding-left: 14px;
+	color: @main-color-light;
+	background-color: transparent;
+	border-left: 1px solid @main-color-light;
+}
+
+.sidebar-nav .nav>.active:focus>a, .sidebar-nav .nav>.active:hover>a, .sidebar-nav .nav>.active>a {
+	padding-left: 14px;
+	font-weight: 700;
+	color: @main-color-light;
+	background-color: transparent;
+	border-left: 1px solid @main-color-light;
 }
 
 
@@ -455,11 +490,11 @@ p.url {
 
 .ptags {
 	height: 17px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    font-size: 110%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
+	font-size: 110%;
 }
 
 .ptags .label {
@@ -795,7 +830,7 @@ a.preview.thumbnail {
 	 
 }
 
-span.article				{background-position: 0 0;      width: 58px; height:53px; margin-left: 3px; margin-top: 14px;}
+span.article				{background-position: 0 0;	  width: 58px; height:53px; margin-left: 3px; margin-top: 14px;}
 span.book					{background-position:-4px -54px;  width: 55px; height:46px; margin-left: 0; margin-top: 16px;}
 span.booklet				{background-position:-2px -101px; height:65px;			margin-top: 6px; }
 span.conference				{background-position:-2px -167px; height:44px;}
@@ -804,7 +839,7 @@ span.inbook					{background-position:-2px -258px; width: 55px; height:60px; marg
 span.incollection			{background-position:-5px -319px; height:60px; width: 56px; margin-top: 8px;}
 span.inproceedings			{background-position:-2px -380px; height:49px; margin-left: 9px; margin-top: 14px;}
 span.manual					{background-position:-2px -430px; height:46px;}
-span.mastersthesis			{background-position:0 -477px;    height:64px;}
+span.mastersthesis			{background-position:0 -477px;	height:64px;}
 span.misc					{background-position:0 -542px;	  height:49px; margin-left: 10px; margin-top: 14px; }
 span.patent					{background-position:0 -592px;width:43px;height:55px; 	  margin-left: 6px; margin-top: 11px;}
 span.pdf					{background-position:0 -648px;width:59px;height:30px;}
@@ -839,9 +874,9 @@ li.post {
 
 h1#pubtitle {
 	font-size: 21px;
-    font-weight: 200;
-    line-height: 1.4;
-    margin: 0 0 5px;
+	font-weight: 200;
+	line-height: 1.4;
+	margin: 0 0 5px;
 }
 
 img.user-avatar {
@@ -860,8 +895,8 @@ a.img-thumbnail span {
 	overflow: hidden;
 	color: #ffffff;
 	background-color: @link-color;
-    font-weight: 300;
-    font-stretch: extra-expanded;
+	font-weight: 300;
+	font-stretch: extra-expanded;
 	padding: 0 1px;
 	width: 64px;
 	overflow:hidden; 
@@ -890,7 +925,7 @@ h4.pub-details {
 	/**
 	Hide all previews by default. A JavaScript function 
 	shows only the first item of the preview stack
-    */
+	*/
 	display: none;
 }
 
@@ -1148,17 +1183,17 @@ div.clearline {
 
 
 .main .sidebar .alert h4 {
-    border: none;
-    font-size: 18px;
-    height: auto;
+	border: none;
+	font-size: 18px;
+	height: auto;
 }
 
 .alert a {
-    text-decoration: underline !important;
+	text-decoration: underline !important;
 }
 
 div#titletext h4.media-heading {
-    border: none;   
+	border: none;   
 }
 
 h2.getting-started {
@@ -1182,23 +1217,23 @@ h2.getting-started {
 h1.content-header,
 h1.content-heading {
 	font-size: 24px;
-    font-weight: normal;
-    height: 30px;
-    line-height: 30px;
+	font-weight: normal;
+	height: 30px;
+	line-height: 30px;
 }
 
 .main h2 {
-    font-size: 20px;
-    line-height: 28px;
-    height: 28px;
+	font-size: 20px;
+	line-height: 28px;
+	height: 28px;
 }
 
 .main h3,
 .main .sidebar h4 {
-    font-size: 18px;
-    line-height: 28px;
-    height: 28px;
-    
+	font-size: 18px;
+	line-height: 28px;
+	height: 28px;
+	
 }
 
 .main .sidebar h4 small {
@@ -1206,14 +1241,13 @@ h1.content-heading {
 }
 
 .main h4 {
-    font-size: 16px;
-    line-height: 20px;
-    height: 20px;
+	font-size: 16px;
+	line-height: 20px;
+	height: 20px;
 }
 
 .main .sidebar h4 {
-    
-    border-bottom: 1px solid @border-color;
+	border-bottom: 1px solid @border-color;
 }
 
 .jumbotron h2 {
@@ -1352,3 +1386,7 @@ ul#urlList {
 	border: 1px solid #777777;
 }
 
+/** fixes for rating plugin */
+#review_info_rating .rating-disabled {
+	cursor: default;
+}
