--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -1,106 +1,53 @@
-@import "color.less";
-
-div#goldstandard {
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 15px;
-	padding-bottom: 10px;
-	background-color: white;
+.community-info {
+	margin-left: 15px;
+	padding: 2px;
+	
 }
 
-div#goldstandard textarea {
-	width: 99%;
-	padding: 5px;
+.community-info.warning {
+	background-color: @alert-warning-bg;
 }
 
-h2#gold_title {
-	margin-bottom: 0px;
-	font-size: 135%;
+#linksresources, #related-publications-references {
+	margin-top: 0.5em;
 }
 
-#gold_resources_links {
-	display: table-cell;
-	width: 45%;
+h1 .publication-description {
+	font-size: 75%;
+	display: block;
+	margin-top: 0.4em;
 }
 
-div#gold_refs, div#postUsers, div#gold_exports {
-	clear: left;
-}
-
-div#gold_references, div#gold_referencedBy {
-	margin-top: 15px;
-}
-
-div#gold_references ol, div#gold_referencedBy ol {
-	list-style: upper-roman;
-}
-
-span.ref_authors_editors, #gold_authorsEditors {
-	font-size: 85%;
-	color: grey;
-}
-
-.gold_info {
-	font-weight: bold;
-}
-
-#gold_abstract, #gold_resources {
-	margin-top: 15px;
-}
-
-ul#gold_menu {
-	float: right;
-}
-
-ul#gold_menu li {
-	display: inline;
-	padding: 3px;
-	margin-right: 5px;	
-}
-
-ul#gold_menu li a {
-	background-color: @main-color;
-	color: white !important;
-	padding: 3px 5px 3px 5px;
-	font-size: 80%;
-	border: 1px solid black;
-}
-
-ul#gold_menu li a:hover {
-	background-color: rgb(233, 233, 233); /* TODO: puma */
-	color: rgb(96, 96, 96) !important;
-}
-
-#gold_resources_links ul {
-	padding-left: 1em;
-}
-
-#gold_resources_pdf {
-	display: table-cell;
-	width: 50%;
-}
-
-#gold_exports, #postUsers {
-	margin-top: 15px;
-}
-
-#gold_resources #gold_resources_links {
-	margin-right: 15px;
-}
-
-#goldstandard #gold_resources_links ul , #goldstandard #gold_refs ul, #goldstandard #postUsers ul {
-	list-style: disc;
-	margin-left: 20px;
-}
-
-#goldstandard #gold_resources_pdf ul {
-	margin-left: 20px;
-}
-
-span.reference_menu {
-	margin-left: 5px;
-}
-
-#gold_title a.publicationLink {
-	font-weight: bold;
+.tagcloud {
+	text-align: center;
+	.tag {
+		display: inline;
+		padding: .2em .6em .3em;
+		margin: 0.8em;
+		background-color: @main-color;
+		font-weight: 700;
+		line-height: 1;
+		color: white;
+		text-align: center;
+		white-space: nowrap;
+		vertical-align: baseline;
+		border-radius: .25em;
+	}
+	
+	.tagtiny {
+		font-size: 50%;
+	}
+	
+	.tagnormal {
+		font-size: 75%
+	}
+	
+	.taglarge {
+		font-size: 100%;
+	}
+	
+	.taghuge {
+		font-size: 125%;
+		line-height: 2;
+	}
 }
