--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
@@ -9,7 +9,7 @@
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
-	xmlns:bform="urn:jsptagdir:/WEB-INF/tags/bstags/layout/form"
+	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
 	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:form="http://www.springframework.org/tags/form">
 	
@@ -81,26 +81,27 @@
 						<fmt:param>${properties['project.name']}</fmt:param>
 					</fmt:message>
 					
-					<form:form action="/limitedAccountActivation" method="POST">
-						<bform:fieldset maximized="${true}" legendKey="register.additional">
+					<form:form action="/limitedAccountActivation" method="POST" cssClass="form-horizontal">
+						<bsform:fieldset legendKey="register.additional">
 							<jsp:attribute name="content">
 								<div class="dissError"><form:errors /></div>
-								<bform:input path="registerUser.email" labelMessageKey="user.settings.email" noHelp="${true}" required="${true}"/>  
-								<bform:input path="registerUser.homepage" labelMessageKey="user.settings.homepage" noHelp="${true}"/>
-								<bform:input path="registerUser.realname" labelMessageKey="user.settings.realname" noHelp="${true}"/>
-								<div class="fsRow">
-									<label class="fsLabel" for="">&#160;</label>
-									<form:checkbox id="checkboxAccept" path="checkboxAccept" class="checkboxWithText" value="yes"/>
-									<form:label class="checkboxText" path="checkboxAccept" ><fmt:message key="limited_account.activation.activitionConditions"/>*</form:label>
-									<div class="dissError"><form:errors path="checkboxAccept" /></div>
-									<div class="clearfloatDiv ">&#160;</div>
-								</div>
+								
+								<bsform:input path="registerUser.email" labelKey="user.settings.email" noHelp="${true}" required="${true}" inputColSpan="8" labelColSpan="4" />
+								<bsform:input path="registerUser.homepage" labelKey="user.settings.homepage" noHelp="${true}" required="${true}" inputColSpan="8" labelColSpan="4" />
+								<bsform:input path="registerUser.realname" labelKey="user.settings.realname" noHelp="${true}" required="${true}" inputColSpan="8" labelColSpan="4" />
+								
+								
+								<bsform:checkbox path="checkboxAccept" labelKey="limited_account.activation.activitionConditions" noHelp="${true}" inputColSpan="8"/>
+								
 								<input type="hidden" name="ckey" value="${command.context.ckey}"/>
 								
-								<fmt:message key="limited_account.activation.activate" var="submitButton"/>
-								<input class="fsSubmit" type="submit" name="submit" value="${submitButton}"/>
+								<div class="form-group">
+									<div class="col-sm-offset-4 col-sm-3 col-md-3 col-lg-3">
+										<bsform:button type="submit" style="success" valueKey="limited_account.activation.activate" size="defaultSize" />
+									</div>
+								</div>
 							</jsp:attribute>
-						</bform:fieldset>
+						</bsform:fieldset>
 					</form:form>
 					<div class="clearfloatDiv ">&#160;</div>
 				</div>
