--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -319,6 +319,8 @@ h4.list-sub-headline {
 	margin-bottom: 1em;
 	margin-left: 0.5em;
 	margin-top: 1.5em;
+	text-align: center;
+	background-color: #ADF; // TODO: use var for color
 }
 
 ul.posts,
