removed background images

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -31,12 +31,9 @@
 
 @light-border-color: #DDDDDD;
 
-@sidebar-color: #f7efed;
-
-@sidebar-background-image-url: url("/resources/image/bg-sidebar.png");
+@sidebar-color: #d2d7f9;
 
 @container-navi-border: #005588;
-
 
 /** SMALL FONT SIZE */
 @small-font-size: 12px;
