--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -55,7 +55,7 @@ ul.dropdown-menu.list-options > li > span {
  * Fonts
  */
 .small-font {
-    font-size: @small-font-size;   
+	font-size: @small-font-size;
 }
 
 /*
@@ -74,9 +74,9 @@ ul.dropdown-menu.list-options > li > span {
 
 .container {
 	border-color: @border-color;
-    border-width: 1px;
-    border-style: solid;
-    border-bottom: none;
+	border-width: 1px;
+	border-style: solid;
+	border-bottom: none;
 	background-color: #FFFFFF;
 }
 
@@ -90,10 +90,8 @@ ul.dropdown-menu.list-options > li > span {
 }
 
 .container.main {
-/* 	padding-top: 20px; */
 	padding: 20px 30px 0 30px;
 	border-top: none;
-/*	margin-bottom: 30px; */
 	-webkit-box-shadow: 2px 2px 30px 6px @border-color;
 	box-shadow: 2px 2px 30px 6px @border-color;
 }
@@ -122,20 +120,20 @@ ul.dropdown-menu.list-options > li > span {
 
 #logo h1,
 #puma-logo h1 {
-    font-size: 36px;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-    margin-top: 20px;
-    margin-bottom: 0px;
+	font-size: 36px;
+	font-family: inherit;
+	font-weight: 500;
+	line-height: 1.1;
+	color: inherit;
+	margin-top: 20px;
+	margin-bottom: 0px;
 }
 
 #logo h1 small#beta,
 #puma-logo h1 small#beta {
-    font-size: 17px;
-    position: relative;
-    top: -7px;
+	font-size: 17px;
+	position: relative;
+	top: -7px;
 }
 
 #logo h1 a,
@@ -230,7 +228,7 @@ a, .btn-link {
 	.navbar-header button:hover,
 	.navbar-header button:focus,
 	.navbar-header button:active {
-		background-color:  @main-color-light;
+		background-color: @main-color-light;
 		color: #fff;
 		border-color: #fff;
 	}
@@ -318,8 +316,8 @@ h4.list-sub-headline {
 	margin-bottom: 1em;
 	margin-left: 0.5em;
 	margin-top: 1.5em;
-}  
- 
+}
+
 ul.posts,
 ul.posts li {
 	margin: 0;
@@ -339,16 +337,13 @@ ul.posts li.post:last-child {
 	border-bottom: none;
 }
 
-
-
-
 li.post div.in-my-collection,
 li.post div.fa-eye-slash,
 li.post div.remote-post {
-	position:relative; 
+	position:relative;
 	width: 0px;
-	overflow: visible; 
-	height: 0px; 
+	overflow: visible;
+	height: 0px;
 }
 
 li.post div.in-my-collection {
@@ -454,11 +449,11 @@ p.url {
 
 .ptags {
 	height: 17px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    font-size: 110%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
+	font-size: 110%;
 }
 
 .ptags .label {
@@ -621,10 +616,6 @@ div#sidebar {
 }
 
 .sidebar-setting-box {
-/* 	position: relative; */
-/* 	top: 20px; */
-/* 	right: 10px; */
-/* 	left: 1em; */
 	position: relative;
 	top: -5px;
 	clear: left;
@@ -789,10 +780,6 @@ span.entrytype {
 	margin-top: 22px;
 }
 
-a.preview.thumbnail {
-	 
-}
-
 span.article				{background-position: 0 0;      width: 58px; height:53px; margin-left: 3px; margin-top: 14px;}
 span.book					{background-position:-4px -54px;  width: 55px; height:46px; margin-left: 0; margin-top: 16px;}
 span.booklet				{background-position:-2px -101px; height:65px;			margin-top: 6px; }
@@ -823,23 +810,15 @@ span.web					{background-position:-2px -1106px;width:61px;height:37px; margin-to
 }
 
 
-li.post {
-	/*
-	border: 1px #ccc solid;
-	box-shadow: 2px 2px 5px 1px rgba(0,0,0, 0.3);
-	*/
-}
-
-
 /**
  * PUBLICATION PAGE
  */
 
 h1#pubtitle {
 	font-size: 21px;
-    font-weight: 200;
-    line-height: 1.4;
-    margin: 0 0 5px;
+	font-weight: 200;
+	line-height: 1.4;
+	margin: 0 0 5px;
 }
 
 img.user-avatar {
@@ -858,8 +837,8 @@ a.img-thumbnail span {
 	overflow: hidden;
 	color: #ffffff;
 	background-color: @link-color;
-    font-weight: 300;
-    font-stretch: extra-expanded;
+	font-weight: 300;
+	font-stretch: extra-expanded;
 	padding: 0 1px;
 	width: 64px;
 	overflow:hidden; 
@@ -888,7 +867,7 @@ h4.pub-details {
 	/**
 	Hide all previews by default. A JavaScript function 
 	shows only the first item of the preview stack
-    */
+	*/
 	display: none;
 }
 
@@ -969,7 +948,6 @@ fieldset {
 	margin-bottom: 10px;
 	font-family: Arial, Tahoma, sans-serif;	
 	font-size: 90%;
-	
 }
 
 .container.footer a:not(.btn) {
@@ -1012,7 +990,6 @@ fieldset {
 }
 
 .container.footer hr {
-	
 	box-sizing: border-box;
 	box-shadow: #FFF 0px 1px 1px 0px;
 	-webkit-box-shadow: rgb(255, 255, 255) 0px 1px 1px 0px;
@@ -1069,12 +1046,10 @@ h4.media-heading {
 	margin-top: 8px;
 }
 
-
 div.clearline {
 	height: 1px;
 	clear: both;
 }
-
 
 .fb {
 	display: inline-block;
@@ -1083,7 +1058,6 @@ div.clearline {
 	padding-left: 12px;
 	margin-bottom: 5px;
 }
-
 
 .fb-lg {
 	padding-top: 10px;
@@ -1146,17 +1120,17 @@ div.clearline {
 
 
 .main .sidebar .alert h4 {
-    border: none;
-    font-size: 18px;
-    height: auto;
+	border: none;
+	font-size: 18px;
+	height: auto;
 }
 
 .alert a {
-    text-decoration: underline !important;
+	text-decoration: underline !important;
 }
 
 div#titletext h4.media-heading {
-    border: none;   
+	border: none;
 }
 
 h2.getting-started {
@@ -1177,26 +1151,23 @@ h2.getting-started {
 }
 
 
-h1.content-header,
-h1.content-heading {
+h1.content-header, h1.content-heading {
 	font-size: 24px;
-    font-weight: normal;
-    height: 30px;
-    line-height: 30px;
+	font-weight: normal;
+	height: 30px;
+	line-height: 30px;
 }
 
 .main h2 {
-    font-size: 20px;
-    line-height: 28px;
-    height: 28px;
+	font-size: 20px;
+	line-height: 28px;
+	height: 28px;
 }
 
-.main h3,
-.main .sidebar h4 {
-    font-size: 18px;
-    line-height: 28px;
-    height: 28px;
-    
+.main h3, .main .sidebar h4 {
+	font-size: 18px;
+	line-height: 28px;
+	height: 28px;
 }
 
 .main .sidebar h4 small {
@@ -1204,9 +1175,9 @@ h1.content-heading {
 }
 
 .main h4 {
-    font-size: 16px;
-    line-height: 20px;
-    height: 20px;
+	font-size: 16px;
+	line-height: 20px;
+	height: 20px;
 }
 
 .main .sidebar h4 {
