only one global css file

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -49,12 +49,18 @@
 
 /** FONT VARIABLES OF FONT AWESOME */ 
 @import "../fonts/font-awesome/less/variables.less";
+@import (inline) "../fonts/font-awesome/css/font-awesome.css";
+
+/** BOOTSTRAP FILE */
+@import "../bootstrap/less/bootstrap.less";
 
 /** MAIN BOOTSTRAP LAYOUT */
 @import "bootstrap-main.less";
 
 /** BOOTSTRAP DISCUSSION LAYOUT */
 @import "bootstrap-discussion.less";
+
+@import "../jquery/plugins/ui/jquery-ui.css";
 
 /** Batchedit page info Box on mouseover*/
 @import "BatchEdit.less";
