added forgotten inline option for css file

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -60,7 +60,7 @@
 /** BOOTSTRAP DISCUSSION LAYOUT */
 @import "bootstrap-discussion.less";
 
-@import "../jquery/plugins/ui/jquery-ui.css";
+@import (inline) "../jquery/plugins/ui/jquery-ui.css";
 
 /** Batchedit page info Box on mouseover*/
 @import "BatchEdit.less";
