fixed font import of font awesome
updated font awesome

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -47,9 +47,9 @@
 /** MULTI LINE ELLIPSIS */
 @import "multiline-ellipsis.less";
 
-/** FONT VARIABLES OF FONT AWESOME */ 
-@import "../fonts/font-awesome/less/variables.less";
-@import (inline) "../fonts/font-awesome/css/font-awesome.css";
+/** FONT AWESOME */
+@import "../fonts/font-awesome/less/font-awesome.less";
+@fa-font-path: "/resources/fonts/font-awesome/fonts";
 
 /** BOOTSTRAP FILE */
 @import "../bootstrap/less/bootstrap.less";
