--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -60,6 +60,7 @@
 /** BOOTSTRAP DISCUSSION LAYOUT */
 @import "bootstrap-discussion.less";
 
+/** TODO: remove jquery ui? */
 @import (inline) "../jquery/plugins/ui/jquery-ui.css";
 
 /** Batchedit page info Box on mouseover*/
