fixed less import of bootstrap file

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -2,8 +2,8 @@
  * BibSonomy Color Theme: 
  * https://kuler.adobe.com/BibSonomy-color-theme-3814695
  */
-
-@import "../bootstrap/less/variables.less";
+/** BOOTSTRAP FILE */
+@import "../bootstrap/less/bootstrap.less";
 
 @main-color: #006699;
 
@@ -12,6 +12,7 @@
 @primary-color: @main-color;
 
 @link-color: @main-color;
+@link-hover-color: @main-color;
 
 @font-color: #333333;
 
@@ -50,9 +51,6 @@
 /** FONT AWESOME */
 @import "../fonts/font-awesome/less/font-awesome.less";
 @fa-font-path: "/resources/fonts/font-awesome/fonts";
-
-/** BOOTSTRAP FILE */
-@import "../bootstrap/less/bootstrap.less";
 
 /** MAIN BOOTSTRAP LAYOUT */
 @import "bootstrap-main.less";
