--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/admin/search.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/admin/search.jspx
@@ -8,6 +8,8 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:menu="urn:jsptagdir:/WEB-INF/tags/bstags/menu"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs"
+	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
 	xmlns:form="http://www.springframework.org/tags/form"
 	xmlns:spring="urn:http://www.springframework.org/tags"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"
@@ -19,10 +21,11 @@
 	<fmt:message key="navi.admin" var="pageTitle" />
 	
 	<layout:layout 
-		pageTitle="${pageTitle} :: Lucene" 
+		pageTitle="full text search" 
 		loginUser="${command.context.loginUser}" 
 		requPath="${requPath}"
-		minimizedContentWidth="${true}">
+		minimizedContentWidth="${true}"
+		noSidebar="${true}">
 		
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
@@ -43,213 +46,79 @@
 			</parts:search>
 		</jsp:attribute>
 		
-		<jsp:attribute name="headerExt">
-			<link rel="stylesheet" type="text/css" href="${resdir}/css/adminlucene.css" />
-		</jsp:attribute>
-		
 		<jsp:attribute name="content">
-		<script language="javascript">
-		function generateIndex(resource) { 
-			var box = window.confirm("This will (re)-generate the active and inactive " + resource +"Index. Are you sure?");
-			if (box) { 
-				window.location.href="?action=generateIndex&amp;resource=" + resource; 
-			}
-		} 
-		
-		function generateOneIndex(resource, id) { 
-			var box = window.confirm("This will (re)-generate the " + resource +"Index with id "+ id +". Are you sure?");
-			if (box) { 
-				window.location.href="?action=generateOneIndex&amp;id="+id+"&amp;resource=" + resource; 
-			}
-		}
-		
-		function generateEsIndex() { 
-			var box = window.confirm("This will generate the global elasticsearch index with a new index structure. Are you sure?");
-			if (box) { 
-				window.location.href="?action=generateIndex&amp;indexType=elasticsearch"; 
-			}
-		} 
-		
-		function generateOneEsIndex(resource) { 
-			var box = window.confirm("This will (re)-generate the elasticsearch index with for " + resource + ". Are you sure?");
-			if (box) { 
-				window.location.href="?action=generateOneIndex&amp;resource=" + resource + "&amp;indexType=elasticsearch"; 
-			}
-		}
-		
-		</script>
-
-			<div id="outerBox">
-				<h2>Lucene Index Statistics</h2>
-				<c:if test="${not empty command.adminResponse}">
-					<div class="adminResponse"><c:out value="${command.adminResponse}"/></div>
-				</c:if>
-			<c:forEach var="resourceIndexInfo" items="${command.indicesInfos}">
-			<div class="indexProperties">
-			<h3><c:out value="${resourceIndexInfo.resourceName}" /> Index</h3>
-			<c:choose>
-				<!--<c:when test="${!index.generatingIndex}">-->
-				<c:when test="TRUE">
-							
-					<c:choose>
-							<!-- Do we have indices for that resource type? -->
-						<c:when test="${fn:length(resourceIndexInfo.luceneResoruceIndicesInfos) > 0}">
-								<!-- the old regeneration method 
-								<a onclick="javascript:generateIndex('${index.resourceName}')" href="#generateIndex">
-									<span style="width: 200px; height: 10px; border: 1px;">re-generate index</span>
-								</a>
-								--> 
-							<table>
-								<tr>
-									<th>Index</th>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<c:choose>
-											<c:when test="${resIndex.active}" >
-												<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-													<th><emph>ACTIVE</emph> index [ID: ${resIndex.id}]
-														<a onclick="javascript:generateOneIndex('${resourceIndexInfo.resourceName}', '${resIndex.id}')" href="#generateIndex">
-															<span style="width: 200px; height: 10px; border: 1px; color: grey;">re-generate</span>
-														</a>
-													</th>
-												</c:if>
-											</c:when>
-											<c:otherwise>
-												<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-													<th>index [ID: ${resIndex.id}]
-														<a onclick="javascript:generateOneIndex('${resourceIndexInfo.resourceName}', '${resIndex.id}')" href="#generateIndex">
-															<span style="width: 200px; height: 10px; border: 1px; color: grey;">re-generate</span>
-														</a>
-													</th>
-												</c:if>
-											</c:otherwise>
-										</c:choose>
-									</c:forEach>
-								</tr>
-								<tr>
-									<td>Path:</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<td>"${resIndex.basePath}"</td>
-									</c:forEach>	
-								</tr>
-								<tr>
-									<td>correct?</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<td>
-											<c:choose>
-												<c:when test="${resIndex.correct}">
-												Yes
-												</c:when>
-												<c:otherwise>
-												No
-												</c:otherwise>
-											</c:choose>
-										</td>
-									</c:forEach>	
-								</tr>
-								<tr>
-									<td>containing docs</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-											<td>${resIndex.indexStatistics.numDocs}</td>
-										</c:if>
-									</c:forEach>
-								</tr>
-								<tr>
-									<td>deleted docs</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-											<td>${resIndex.indexStatistics.numDeletedDocs}</td>
-											</c:if>
-									</c:forEach>
-								</tr>
-								<tr>
-									<td>newest date</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-											<td><fmt:formatDate pattern="yyyy/MM/dd HH:mm:ss" value="${resIndex.indexStatistics.newestRecordDate}" /></td>
-										</c:if>
-									</c:forEach>
-								</tr>
-								<tr>
-									<td>current version</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-											<td>${resIndex.indexStatistics.currentVersion}</td>
-										</c:if>
-									</c:forEach>
-								</tr>
-								<tr>
-									<td>isCurrent</td>
-									<c:forEach var="resIndex" items="${resourceIndexInfo.luceneResoruceIndicesInfos}">
-										<c:if test="${resIndex.id != index.generator.generatingIndexId}">
-											<td>${resIndex.indexStatistics.current}</td>
-										</c:if>
-									</c:forEach>
-								</tr>
-							</table>
-							<c:set var="generatingIndex" value="${resourceIndexInfo.generatingIndex}" />
-							<c:if test="${not empty (generatingIndex)}">
-								<p>Currently index[${generatingIndex.id}] is regenerating:</p>
-								<div style="width: 202px; height: 12px; border: 1px solid #999999; background-color: #CCCCCC">
-			  					<div style="width: ${generatingIndex.indexGenerationProgress * 2}px; height:10px; border: 1px solid #CCCCCC; background-color: #002244">
-										<!-- placeholder -->
-									</div>
-								</div>
-								<div>
-									<span>${generatingIndex.indexGenerationProgress} % done.</span>
-								</div>
-							</c:if>
-						</c:when>
-						<c:otherwise>
-							Seems to be properly configured but could not physically be found. <br />
-							<a href="?action=generateIndex&amp;resource=${index.resourceName}">Generate a new <c:out value="${index.resourceName}" /> Index</a>
-						</c:otherwise>
-					</c:choose>
-				</c:when>
-					<!-- <c:otherwise>
-						<div>
-							Currently generating new index.
-						</div>    
-						<div style="width: 202px; height: 12px; border: 1px solid #999999; background-color: #CCCCCC">
-			  					<div style="width: ${index.indexGenerationProgress * 2}px; height:10px; border: 1px solid #CCCCCC; background-color: #002244">
-						
-								</div>
-						</div>
-						<div>
-							<span>${index.indexGenerationProgress} % done.</span>
-						</div>
-					</c:otherwise> -->
-			</c:choose>
-			</div>
-			</c:forEach>
-			</div>
-			
-			
-			<div name="sharedResourceIndexGenerator">
-			<c:if test="${not empty properties['es.cluster.name']}">
-				<h2>Elasticsearch Shared Resource Index</h2>
-				
-				<c:if test="${command.esGlobalMessage != null}">
-					<p><c:out value="${command.esGlobalMessage}"/></p>
-				</c:if>
-				
-				<c:choose>				
-					<c:when test="${fn:length(command.esIndicesInfosBibtex) == 0 and fn:length(command.esIndicesInfosBookmark) == 0 and fn:length(command.esIndicesInfosGoldStandard) == 0}">
-						<p>
-							<a onclick="javascript:generateEsIndex()" href="#generateIndex">
-								<span style="width: 200px; height: 10px; border: 1px; color: grey;">generate</span>
-							</a>
-						</p>
-					</c:when>					
-					<c:otherwise>
-						<es:esIndicesTable indexInfoList="${command.esIndicesInfosBibtex}"/>
-						<es:esIndicesTable indexInfoList="${command.esIndicesInfosBookmark}"/>
-						<es:esIndicesTable indexInfoList="${command.esIndicesInfosGoldStandard}"/>
-					</c:otherwise>
-				</c:choose>	
+			<h2>Elasticsearch Indices</h2>
+			<c:if test="${not empty command.adminResponse}">
+				<div class="adminResponse"><c:out value="${command.adminResponse}"/></div>
 			</c:if>
-			</div>
-
+			
+			<c:forEach items="${command.searchIndexInfo}" var="searchIndexInfoEntry">
+				<c:set var="searchIndexInfos" value="${searchIndexInfoEntry.value}" />
+				<c:set var="resourcType" value="${searchIndexInfoEntry.key}" />
+				<h3><c:out value="${resourcType} Indices" /></h3>
+				<c:set var="searchIndexInfosSize" value="${fn:length(searchIndexInfos)}" />
+				<c:choose>
+					<c:when test="${searchIndexInfosSize > 0 }">
+						<table class="table">
+							<tr>
+								<th>Index Name</th>
+								<th>State</th>
+								<th># Docs</th>
+								<th>last tas id</th>
+								<th>last log date</th>
+								<th>last person id</th>
+								<th><!-- keep me --></th>
+							</tr>
+							<c:forEach var="searchIndexInfo" items="${searchIndexInfos}">
+								<tr>
+									<td><c:out value="${searchIndexInfo.id}" /></td>
+									<td><c:out value="${searchIndexInfo.state}" /></td>
+									
+									<c:choose>
+										<c:when test="${searchIndexInfo.state != 'GENERATING' }">
+											<td><c:out value="${searchIndexInfo.statistics.numberOfDocuments}" /></td>
+											<td><c:out value="${searchIndexInfo.syncState.last_tas_id}" /></td>
+											<td><c:out value="${searchIndexInfo.syncState.last_log_date}" /></td>
+											<td><c:out value="${searchIndexInfo.syncState.lastPersonChangeId}" /></td>
+										</c:when>
+										
+										<c:otherwise>
+											<td colspan="4">
+												Progress
+											</td>
+										</c:otherwise>
+									</c:choose>
+									
+									<th><!-- keep me --></th>
+								</tr>
+							</c:forEach>
+							
+							
+						</table>
+						<c:if test="${searchIndexInfosSize lt 2}">
+							<bs:alert style="warning">
+								<jsp:attribute name="alertBody">
+									TODO
+								</jsp:attribute>
+							</bs:alert>
+						</c:if>
+					</c:when>
+					
+					<c:otherwise>
+						<bs:alert style="warning">
+							<jsp:attribute name="alertBody">
+								Did not found any indices. Please generate an index.
+							</jsp:attribute>
+						</bs:alert>
+						
+					</c:otherwise>
+				</c:choose>
+				<form method="post">
+					<input type="hidden" name="resource" value="${resourcType}" />
+					<input type="hidden" name="action" value="generateIndex" />
+					<bsform:button size="defaultSize" style="defaultStyle" value="Generate new index" type="submits"/>
+				</form>
+			</c:forEach>
 		</jsp:attribute>
 	</layout:layout>
 </jsp:root>
