--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/userpersonalized.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/userpersonalized.jspx
@@ -120,7 +120,7 @@
 							</fmt:param>
 						</fmt:message>
 						${mtl:ch('nbsp')}
-						<c:choose>
+						<!-- <c:choose>
 							<c:when test="${command.followerOfUser}">
 								<span id="removeLink">
 									<a style="cursor: pointer;" 
@@ -150,7 +150,7 @@
 									   <fmt:message key="follow.link.text.followLong"/></a>
 								</span>
 							</c:otherwise>
-						</c:choose>
+						</c:choose> -->
 					</jsp:attribute>
 				</parts:infobox>
 			</c:if>
